--- a/FrontEnd/OnePageWeb/ws-014/intex.html
+++ b/FrontEnd/OnePageWeb/ws-014/intex.html
@@ -10,6 +10,7 @@
 
 <body>
     <div id="main">
+<!--         navigation bar -->
         <div id="nav">
             <h2>Shakir siddiqui</h2>
             <div id="nav_p2">
