--- a/FrontEnd/OnePageWeb/ws-014/intex.html
+++ b/FrontEnd/OnePageWeb/ws-014/intex.html
@@ -20,12 +20,15 @@
             </div>
         </div>
 
+<!--         hero section -->
+
         <div id="text">
             <h1>hello,i'm</h1>
             <h1>francesco</h1>
             <h1>gioia</h1>
         </div>
     </div>
+    
     <img src="https://images.unsplash.com/photo-1732734042420-1fa41185ad56?q=80&w=1905&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt="">
     <img id="img2" src="https://images.unsplash.com/photo-1680617020402-572d20d1612a?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDN8fHxlbnwwfHx8fHw%3D" alt="">
     <img id="img3" src="https://images.unsplash.com/photo-1726002575476-00708f3c6aa1?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1yZWxhdGVkfDE0fHx8ZW58MHx8fHx8" alt="">
