--- a/FrontEnd/miniProject/miniProject2/index.html
+++ b/FrontEnd/miniProject/miniProject2/index.html
@@ -26,6 +26,7 @@
 
         <div id="center">
             <div id="content">
+<!--                 add video link here if persent video not work -->
                 <video autoplay loop muted src="video.mp4" ></video>
                 <div id="overley">
                     <div id="over1">
